# static-set-cover

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: BuildAndRunTests.yml
include/: BoolPack.h  Evaluator.h  Impl.h  IndexSequenceUtil.h  MinSetCover.h  TupleUtil.h  TypeMap.h  TypeSet.h
test/: CMakeLists.txt  EvaluatorTest.cpp  MinSetCoverTest.cpp
